# skoot

./: .coveragerc  .gitignore  .travis.yml  CONTRIBUTING.md  ISSUE_TEMPLATE.md  MANIFEST.in  Makefile  README.md  about.html  appveyor.yml  appveyor_old.yml  appveyor_runtests.py  azure-pipelines.yml  contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  pytest.ini  requirements.txt  search.html  searchindex.js  setup.cfg  setup.html  setup.py  user_guide.html
.circleci/: config.yml
.eggs/: Cerberus-1.2-py3.5.egg
0.20.0/: about.html  contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  searchindex.js
_downloads/: ex_anonymous_transformer.ipynb  ex_binning.ipynb  ex_datasets.ipynb  ex_date_extraction.ipynb  ex_date_transformation.ipynb  ex_date_transformation.py  ex_getting_acquainted.ipynb  ex_getting_acquainted.py  ex_hypothesis_validation.ipynb  ex_one_hot.ipynb  ex_one_hot.py  ex_oversample.ipynb  ex_oversample.py  ex_profiling.ipynb  ex_smote.ipynb  ex_smote.py  ex_summarize.ipynb  ex_undersample.ipynb
_modules/: index.html
_sources/: contributing.rst.txt  index.rst.txt  user_guide.rst.txt
_static/: documentation_options.js
auto_examples/: ex_anonymous_transformer.html  ex_getting_acquainted.html  index.html
build_tools/: cythonize.py
build_tools/travis/: after_success.sh  before_install.sh  build_manywheels_linux.sh  install.sh  setup.cfg  test_script.sh
develop/: .buildinfo  about.html  contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  setup.html  user_guide.html
(+352 files in other folders)
