[aliases]
test = pytest

[tool:pytest]
# disable-pytest-warnings should be removed once we rewrite tests
# using yield with parametrize
addopts =
    --disable-pytest-warnings

# Skip doctest since sklearn v0.20+ screws with Iris and a lot of doctests are
# based on iris...
# --doctest-modules

[metadata]
description-file = README.md
